jsonschemadsl2ecore.trafo.opt/test/test66/validtests/example11.test66
{
	"prop1":{},
	"prop3":{ },
	"prop5":{}
}   