jsonschemadsl2ecore.trafo.opt/test/test66/invalidtests/example14.test66
{
	"prop1":{},
	"prop3":{ },
	"prop5":{"key1":"key1","key2":"key2","key3":"key3" },
	"prop6":{},
	"prop7":{},
	"add1":"ADD_some"
}      